tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_upcast.sk
base class A {
  children =
  | X()
  | Y()
}
fun test(): String {
  (X() : A) match {
  | X() -> "Fail\n"
  }
}
